--- a/alkonackanV1/res/values/strings.xml
+++ b/alkonackanV1/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<string name="vikt_prompt">Vikt</string>
     <string name="hello">Hello World, start!</string>
     <string name="app_name">alkonackanV1</string>
 </resources>
